
2017-09-05  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_validate_program_data): temporarily disabled ASSIGN
	  fields with changing address (BASED + LINKAGE) to prevent SIGSEGV
	  until code generation is changed, see bug #421

2017-09-04  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* codegen.c, tree.c, tree.h, typeck.c: started to change compiler
	  internal variables to be unsigned int instead of int to prevent
	  C compiler warnings about a possible negative access to arrays
	  and sign mismatches in comparisons
	* codegen.c: output comment for decimal constants only if we have
	  actually generate decimal constants

2017-09-02  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* reserved.c: adjusted some missing context-sensitive options
	* reserved.c, parser.y: added parsing of PHYSICAL attribute in
	  LENGTH functions

2017-08-28  Edward Hart <edward.dan.hart@gmail.com>

	* field.c (validate_field_1): refactored.

2017-08-23  Edward Hart <edward.dan.hart@gmail.com>

	* cobc.c (cobc_clean_up): added calls to (plex_call_destroy) and
	  (ylex_call_destroy), *actually* fixing bug #407.
	* pplex.l (ylex_clear_all): added calls to (cb_reset_78) and
	  (cb_reset_global_78) to prevent memory leak on abort (bug #417).

2017-08-20  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* tree.c: work on expression warning messages and added more

2017-08-19  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c, flag.def, warnings.def, cobc.h: changed handling for
	  cobc --help, mainly to provide translators with context for msgids
	* field.c: adjusted message for cb_warn_ignored_initial_val

2017-08-18  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* flag.def: always activate cb_flag_recursive_check by CB_FLAG_ON
	* tree.c, codegen.c: assume RECURSIVE for -fno-recursive-check

2017-08-18  Ron Norman <rjn@inglenet.com>

	* codegen.c: emit code for CALL to handle ON EXCEPTION
